// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.plan;

option java_multiple_files = true;

import "io/harness/pms/contracts/plan/trigger_info.proto";
import "io/harness/pms/contracts/plan/principal_info.proto";
import "io/harness/pms/contracts/execution/executable_response.proto";

// next ID: 18
message ExecutionMetadata {
  int32 runSequence = 1;
  ExecutionTriggerInfo triggerInfo = 2;
  string pipelineIdentifier = 4;
  string executionUuid = 6;
  ExecutionPrincipalInfo principalInfo = 8;
  bytes gitSyncBranchContext = 10;
  string moduleType = 11;
  RetryExecutionInfo retryInfo = 12;
  bool isNotificationConfigured = 13;
  PipelineStoreType pipelineStoreType = 14;
  string pipelineConnectorRef = 15;
  PipelineStageInfo pipelineStageInfo = 16;
  string harnessVersion = 17;
  bool isDebug = 18;
  ExecutionMode executionMode = 19;
  bool useMatrixFieldName = 20;
  repeated PostExecutionRollbackInfo postExecutionRollbackInfo = 21;
}

message RetryExecutionInfo {
  bool isRetry = 1;
  string rootExecutionId = 2;
  string parentRetryId = 3;
}

message PipelineStageInfo {
  bool hasParentPipeline = 1;
  string stageNodeId = 2;
  string executionId = 3;
  string identifier = 4;
  string projectId = 5;
  string orgId = 6;
  int32 runSequence = 7;
}

message PostExecutionRollbackInfo {
  string postExecutionRollbackStageId = 1;  // if stage is under strategy then this will be the strategy setup id
  io.harness.pms.contracts.execution.StrategyMetadata rollbackStageStrategyMetadata = 2;
  string originalStageExecutionId = 3;
}

enum PipelineStoreType {
  UNDEFINED = 0;  // this is for backwards compatibility
  INLINE = 1;
  REMOTE = 2;
}

enum ExecutionMode {
  UNDEFINED_MODE = 0;  // will be treated as NORMAL
  NORMAL = 1;
  POST_EXECUTION_ROLLBACK = 2;
  PIPELINE_ROLLBACK = 3;
}